--- a/views/_dealer_score.erb
+++ b/views/_dealer_score.erb
@@ -1,15 +1,18 @@
 <div class="dealer-score">
-  <% if @game.all_players_finished? %>
-    <% if @dealer.hand_is_blackjack? %>
-      <strong>Blackjack!</strong>
-    <% elsif @dealer.hand_is_bust? %>
-      <strong>Busted with <%= "#{@dealer.hand_value}" %></strong>
+  <% if @game.game_in_progress && next_player_to_bet.nil? %>
+
+    <% if @game.all_players_finished? %>
+      <% if @dealer.hand_is_blackjack? %>
+        <strong>Blackjack!</strong>
+      <% elsif @dealer.hand_is_bust? %>
+        <strong>Busted with <%= "#{@dealer.hand_value}" %></strong>
+      <% else %>
+        <%= "#{@dealer.hand_is_soft_or_hard.nil? ?
+                '' :
+                "#{@dealer.hand_is_soft_or_hard.capitalize} " } #{@dealer.hand_value}" %>
+      <% end %>
     <% else %>
-      <%= "#{@dealer.hand_is_soft_or_hard.nil? ?
-              '' :
-              "#{@dealer.hand_is_soft_or_hard.capitalize} " } #{@dealer.hand_value}" %>
+      <%= "#{@dealer.card_showing.capitalize}" %>
     <% end %>
-  <% else %>
-    <%= "#{@dealer.card_showing.capitalize}" %>
   <% end %>
 </div>
